--- a/LearnBlazor/LearnBlazor/Properties/launchSettings.json
+++ b/LearnBlazor/LearnBlazor/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/launchsettings.json",
     "profiles": {
-      "BlazorFund01": {
+      "Blazor": {
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
